--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1523,6 +1523,16 @@ journal = {IEEE Transactions on Audio, Speech, and Language Processing},
 doi = {10.1109/TSA.2005.858005}
 }
 
+@inproceedings{bss2,
+author = {Vincent, Emmanuel and Sawada, Hiroshi and Bofill, Pau and Makino, Shoji and Rosca, Justinian},
+title = {First stereo audio source separation evaluation campaign: data, algorithms and results},
+year = {2007},
+pages = {552--559},
+booktitle={7th International Conference on Independent Component Analysis and Blind Source Separation (ICA). Lecture Notes in Computer Science},
+publisher={Springer},
+volume={4666}
+}
+
 @article{vincent07,
 author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
 year = {2007},
