Reorganize ch3 based on simplified block diagrams

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -485,7 +485,7 @@ Figures \ref{fig:bunchansgts1} and \ref{fig:bunchansgts2} show different configu
 
 \newpagefill
 
-\subsubsection{Interesting frequency scales}
+\subsubsection{Interesting frequency scales for musical applications}
 \label{sec:fscales}
 
 Let us consider frequency scales that may be interesting for music or audio analysis, in addition to the Constant-Q/logarithmic and mel scales already defined in the reference NSGT library and shown in the previous section.
