--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -4,15 +4,54 @@
 \section{Methodology}
 \label{sec:methodology}
 
-The proposed adaptation of Open-Unmix to use the sliCQ Transform (sliCQT) is named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} and is the subject and main result of this thesis.
+The proposed adaptation of Open-Unmix to use the sliCQ Transform (sliCQT) is named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} and is the subject and main result of this thesis. xumx-sliCQ is pronounced like ``X-U-M-X-slice-Q.''
 
-xumx-sliCQ will be based on the Open-Unmix PyTorch template, and as a result, all of the code developed will be in Python, using PyTorch for the deep learning network to run on the GPU. The rest of this chapter will be focused on the Python and PyTorch implementation details of xumx-sliCQ, including improvements or changes made to the reference NSGT/sliCQT Python library.\footnote{\url{https://github.com/grrrr/nsgt}} External projects will be forked to my GitHub account\footnote{\url{https://github.com/sevagh/nsgt}} to contain all of the modifications required for this thesis.
+An overview of Open-Unmix was given in section \ref{sec:umx}. xumx-sliCQ will be based on the Open-Unmix PyTorch template, and as a result, all of the code developed will be in Python, using PyTorch for the deep learning network to run on the GPU. The rest of this chapter will be focused on the Python and PyTorch implementation details of xumx-sliCQ.
 
-\subsection{Improving the NSGT/sliCQT reference library}
+Figure \ref{fig:generalmdx} shows a block diagram for a general DNN music demixing system that uses the magnitude spectrogram as  its input and output representation, and uses the phase of the mixture to swap back to the time domain. This strategy was described in section \ref{sec:noisyphaseoracle}.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{./images-blockdiagrams/generic_mdx.png}
+	\caption{General DNN music demixing system with magnitude spectrograms, single target}
+	\label{fig:generalmdx}
+\end{figure}
+
+Figure \ref{fig:umxandxumxslicq} shows how UMX and xumx-sliCQ are variants of the above general system, and how they differ from each other.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[UMX system, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/umx_clean.png}}\\
+	\subfloat[xumx-sliCQ, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_clean.png}}
+	\caption{UMX and xumx-sliCQ compared}
+	\label{fig:umxandxumxslicq}
+\end{figure}
+
+Figure \ref{fig:xumxcl} shows how independent UMX networks for the desired four targets (vocals, drums, bass, other) are combined together in X-UMX, illustrating the key concepts of X-UMX, which are the combination losses across the four targets (CL) and the multi-domain loss functions (MDL) considering the magnitude spectrograms and time-domain waveforms, as described in section \ref{sec:xumx}.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[UMX network loss, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/umx_single_target.png}}\\
+	\subfloat[X-UMX network loss, all four targets]{\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_multiple_targets.png}}
+	\caption{UMX and X-UMX compared}
+	\label{fig:xumxcl}
+\end{figure}
+
+Section \ref{sec:inputrepresentation} will cover the replacement of the STFT with the sliCQT in the input representation. Next, section \ref{sec:neuralnet} will show how the Bi-LSTM RNN architecture of UMX is replaced with a CDAE CNN architecture, and how the four independent networks are combined like X-UMX. Finally, section \ref{sec:postprocessing} will show how the post-processing Wiener-EM step is adapted for the sliCQT.
+
+\subsection{Input representation}
+\label{sec:inputrepresentation}
+
+In this section, we will describe the steps taken to use the sliCQT as the input representation in xumx-sliCQ.
+
+First, section \ref{sec:improvelib} will show the addition of new frequency scales that are interesting for music applications, as described in section \ref{sec:fscales}. Recall from section \ref{sec:theorynsgt} that the NSGT/sliCQT can be thought of as filterbanks, and the chosen frequency scale is the most important parameter that defines the spectral representation of the musical signal, which influences the results of the downstream application.
+
+Next, section \ref{sec:torchgpu} will show the modifications made to the library to compute the transform with PyTorch on the GPU, so that it can be used in the UMX neural network code. Following that, section \ref{sec:slicqtutil} will describe additional necessary utilities added to the PyTorch sliCQT, including an overlap-add utility as described in section \ref{sec:theoryslicqt}, as well as the related spectrogram plotting code.
+
+Finally, in section \ref{sec:slicqparamsrch}, we describe the parameter search that was run to choose sliCQT parameters that may perform best in a music demixing network. Section \ref{sec:fasterbsscupy} describes modifications made to the BSS eval metrics library to make it run faster on the GPU, with the aim to speed up the parameter search process.
+
+\subsubsection{New frequency scales in the sliCQT library}
 \label{sec:improvelib}
-
-\subsubsection{New frequency scales}
-\label{sec:freqscales}
 
 The time and frequency resolution of the NSGT and sliCQT in the reference library are defined from the frequency scale. The essential parameters to a frequency scale in the library are $f_{\text{min}}$ and $f_{\text{max}}$, which are the minimum and maximum frequency in Hz, and the total frequency bins. The type of scale determines how the frequency bins are distributed between $f_{min}$--$f_{\text{max}}$. A custom frequency scale may use additional parameters as needed, like the frequency offset parameter of the Variable-Q scale shown in section \ref{sec:theorynsgt}.
 
@@ -79,8 +118,8 @@ In addition to the frequency scale, the user must specify the slice length and t
 
 The NSGT library already contains code which warns the user if their chosen values for the slice length and transition area cannot support their desired frequency scale. The warning code was adapted to allow users to choose an appropriate slice length and transition area for their frequency scale, so that users can use the sliCQT with fewer parameters.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/fscale.py\#L36}}
 
-\subsubsection{GPU-accelerated NSGT/sliCQT with PyTorch}
-\label{sec:torchslicq}
+\subsubsection{Computing the sliCQT on the GPU with PyTorch}
+\label{sec:torchgpu}
 
 The reference NSGT/sliCQT library uses NumPy, a CPU-based Python numerical computation library. To train deep neural networks efficiently, and to use the NSGT within the code of Open-Unmix, using PyTorch with GPU support is required. PyTorch, in addition to being a deep learning framework, is also a numerical computation library which implements a large amount of NumPy's functions.
 
@@ -93,9 +132,6 @@ The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} packag
   \caption{Excerpt of the conversion of lists, for loops, and generators of the forward NSGT to torch tensors and parallel matrix operations}
   \label{code:seconddiff}
 \end{listing}
-
-\subsubsection{Matrix and ragged forms}
-\label{sec:matrixvragged}
 
 After the port to torch, the matrix form is a single tensor where each row represents a frequency bin, and the total number of columns represents the maximum time resolution from the highest frequency bin. Every lower frequency bin had zero-padding applied to have a row of time coefficients with the same length as the highest frequency bin. The non-matrix form could be referred to the ragged or jagged form, from its non-rectangular shape.
 
@@ -162,8 +198,8 @@ else:
 
 Note the shape of the matrix form is $401 \text{ slices} \times 2 \text{ channels} \times 21 \text{ frequency bins} \times 264 \text{ time coefficents}$. The shape of the first matrix in the ragged form is $401 \text{ slices} \times 2 \text{ channels} \times 8 \text{ frequency bins} \times 16 \text{ time coefficents}$. This is the lowest time-frequency resolution of this sliCQT, with only outputs 16 time coefficients, shared by the first eight frequency bins. In the matrix form, these 16 values are padded up to 264 to fit the maximum time resolution. The total summed frequency bins of the list of matrices in the ragged form is 21, leading to an identical transform. Also note the identical reconstruction error from both forms.
 
-\subsubsection{Slice overlap-add utility}
-\label{sec:slicqola}
+\subsubsection{Overlap-add and spectrogram plotting utilities in the sliCQT library}
+\label{sec:slicqtutil}
 
 In section \ref{sec:theoryslicqt}, the sliCQT was described to have a 50\% overlap between adjacent slices, and that overlap-adding the slices was necessary to generate a good spectrogram. Figure \ref{fig:slicqtukeys} showed the difference between the overlap-added spectrogram and one where adjacent slices were simply joined without any overlap.
 
@@ -179,14 +215,11 @@ The next addition to the slice utilities was to include a utility function for t
 
 The overlap-add procedure for the matrix form of the sliCQT operates on the whole matrix. For the ragged transform, it is applied to each of the tensors in the list.
 
-\subsubsection{Spectrogram plotting utility}
-\label{sec:slicqspec}
-
 Due to necessity of the 50\% overlap to create a meaningful spectrogram, the overlap-add utility leads to the need for a spectrogram plotting implementation. All of the spectrograms in this thesis were created using the example spectrogram script.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/examples/spectrogram.py}} The spectrogram utility function\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/plot.py}} takes the overlap-added matrix form of the sliCQT as an input, and uses the matplotlib\footnote{\url{matplotlib.org/}} library functions pcolormesh\footnote{\url{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.pcolormesh.html}} and colorbar\footnote{\url{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.colorbar.html}} to generate a spectrogram.
 
 \newpagefill
 
-\subsection{Choosing sliCQT parameters}
+\subsubsection{Choosing sliCQT parameters}
 \label{sec:slicqparamsrch}
 
 The initial exploration is on whether the sliCQT is suitable as an STFT replacement for music demixing with magnitude spectrogram masking, since this is how Open-Unmix works. A simple approach is to experiment with the sliCQT replacing the STFT inside oracle mask estimators, which were described in \ref{sec:masksandoracles}. If the oracle experiments show promising results, such as the sliCQT oracle performance surpassing STFT oracle performance, it's a good first step towards replacing the STFT with the sliCQT in a neural network.
@@ -203,9 +236,6 @@ In the parameter exploration, we require the following components to build the o
 	\item
 		Reference Python NSGT/sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}}
 \end{tight_enumerate}
-
-\subsubsection{MPI oracle parameter search testbench}
-\label{sec:mpiparam}
 
 The mix-phase inversion oracle (MPI) score is the target we will choose to maximize when searching for sliCQT parameters to beat the STFT. The MPI oracle was described in section \ref{sec:noisyphaseoracle}.
 
@@ -248,9 +278,7 @@ The slice length and transition length were automatically picked for the randoml
 
 The maximized metric is the median SDR score across the four targets of the 14 validation tracks of MUSDB18-HQ. The SDR is a score in dB which commonly is the single evaluation metric that summarizes the global performance of a music demixing system, which was described as part of the total set of BSS metrics in section \ref{sec:evalbss}, and which was the objective metric used to rank demixing systems in the ISMIR 2021 Music Demixing Challenge \parencite{mdx21}.\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}}
 
-\newpagefill
-
-\subsubsection{GPU-accelerated BSS metrics with CuPy}
+\subsubsection{Speeding up the parameter search using the GPU and CuPy}
 \label{sec:fasterbsscupy}
 
 During the oracle evaluation, line-profiler showed that the slowest step was the BSS metrics calculation from the sigsep-mus-eval\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}} package.
@@ -269,8 +297,8 @@ Similar to the NSGT/sliCQT library, the modifications made to the museval librar
 
 \newpagefill
 
-\subsection{Open-Unmix with the sliCQ Transform}
-\label{sec:slicqumx}
+\subsection{Neural network}
+\label{sec:neuralnet}
 
 First, we will look at incorporating CrossNet-Open-Unmix (X-UMX) ideas with Open-Unmix. Since X-UMX and UMX are both based on the STFT spectrogram, the general model will stay the same even if we replace the STFT with the sliCQT.
 
@@ -278,16 +306,7 @@ As mentioned, Open-Unmix has a reference PyTorch implementation\footnote{\url{ht
 
 After the X-UMX modifications are described, we will look at which parts of Open-Unmix need to incorporate the PyTorch implementation of the sliCQT that was described in section \ref{sec:torchslicq}.\footnote{\url{https://github.com/sevagh/nsgt}} Finally, we will show how we adapted the STFT-based convolutional denoising autoencoder (CDAE) model architectures that were described in section \ref{sec:cdae} to the sliCQT.
 
-\subsubsection{Incorporating CrossNet-Open-Unmix}
-\label{sec:xumxinc}
-
-For simplicity, having a single training loop and single trained model to perform the separation is easier to consider than four independent models. For this reason, and that the final music demixing performance of X-UMX is higher than UMX, we chose to use the X-UMX variant of Open-Unmix.
-
-The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. With CrossNet-Open-Unmix, the MUSDB18-HQ data loader needs to return $(x, y_{1}, y_{2}, y_{3}, y_{4}$ in training, where $y_{1-4}$ are the ground-truth waveforms of all four isolated targets.
-
-\newpagefill
-
-\subsubsection{Replacing the STFT with the sliCQT in the neural network}
+\subsubsection{Replacing the STFT with the sliCQT in UMX}
 \label{sec:replacestft}
 
 \todo[inline]{in section 2 whatever, we described umx}
@@ -350,30 +369,7 @@ Within each sub-network, or \Verb#OpenUnmixTimeBucket#, the implementation is si
   \label{code:raggedumxoneblock}
 \end{listing}
 
-\subsubsection{Replacing the STFT with the sliCQT in post-processing}
-\label{sec:replacestftwiener}
-
-After the \Verb#OpenUnmix# class outputs the estimates of the magnitude sliCQT for all four targets, the post-processing Wiener expectation-maximization (EM) step needs to be applied. The code for the Wiener-EM step is essentially unchanged from the original, since both the sliCQT and STFT output complex Fourier coefficients.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/filtering.py\#L290}} The inputs to the Wiener-EM function are the mixed complex spectrogram and a rectangular matrix containing the four target magnitude spectrograms.
-
-The approach in xumx-sliCQ was to add a boolean parameter named \Verb#slicq_wiener#. If \Verb#slicq_wiener# is set to False, the first waveform estimate is taken from the sliCQT and the Wiener-EM step is applied on the STFT,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L301}} shown in Code Listing \ref{code:wienerstft}. If \Verb#slicq_wiener# is set to True, the Wiener-EM step is performed directly on the sliCQT.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L380}} The ragged sliCQT was zero-padded into a single rectangular matrix, allowing the original Wiener-EM code to be used (with minor modifications) for both the STFT and rectangular zero-padded sliCQT.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L389-L404}} The zero-padding operation is shown in Code Listing \ref{code:wienerslicqt}. Each strategy results in a different music demixing quality and execution time, which will be discussed in section \ref{sec:experiment}. 
-
-\begin{listing}[ht]
-  \centering
-\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{python}{./scripts/wiener_stft.py}
-\end{inputminted}
-  \caption{Using the STFT in the Wiener-EM post-processing step}
-  \label{code:wienerstft}
-\end{listing}
-
-\begin{listing}[ht]
-  \centering
-\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{python}{./scripts/wiener_slicqt.py}
-\end{inputminted}
-  \caption{Zero-padding the sliCQT for the Wiener-EM post-processing step}
-  \label{code:wienerslicqt}
-\end{listing}
-
-\subsubsection{Defining the convolutional layers}
+\subsubsection{Defining the convolutional layers of the CDAE}
 \label{sec:convlayers}
 
 The convolutional denoising autoencoder (CDAE) models of \textcite{plumbley1, plumbley2} were used in xumx-sliCQ. In the early experiments, they showed more promising results than the bi-LSTM model. The bi-LSTM model was first adapted to work on each time bucket of the ragged list of the sliCQT, but the longest time resolution (highest frequency bin) was prohibitively slow in both training and inference. Convolutional layers are a simple way of defining 2D time-frequency filters that slide over the 2D time-frequency matrices that correspond to different time buckets of the ragged sliCQT. The diagram in Figure \ref{fig:cdaeslicqt} shows how the convolutional layers should be applied to the ragged sliCQT.
@@ -456,5 +452,37 @@ The exact parameters and configuration of the convolutional kernels and layers a
 	 \hline
 \end{tabular}
 \end{table}
+
+\subsubsection{Combining the target networks like X-UMX}
+\label{sec:xumxinc}
+
+For simplicity, having a single training loop and single trained model to perform the separation is easier to consider than four independent models. For this reason, and that the final music demixing performance of X-UMX is higher than UMX, we chose to use the X-UMX variant of Open-Unmix.
+
+The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. With CrossNet-Open-Unmix, the MUSDB18-HQ data loader needs to return $(x, y_{1}, y_{2}, y_{3}, y_{4}$ in training, where $y_{1-4}$ are the ground-truth waveforms of all four isolated targets.
+
+\newpagefill
+
+\subsection{Post-processing}
+\label{sec:postprocessing}
+
+After the \Verb#OpenUnmix# class outputs the estimates of the magnitude sliCQT for all four targets, the post-processing Wiener expectation-maximization (EM) step needs to be applied. The code for the Wiener-EM step is essentially unchanged from the original, since both the sliCQT and STFT output complex Fourier coefficients.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/filtering.py\#L290}} The inputs to the Wiener-EM function are the mixed complex spectrogram and a rectangular matrix containing the four target magnitude spectrograms.
+
+The approach in xumx-sliCQ was to add a boolean parameter named \Verb#slicq_wiener#. If \Verb#slicq_wiener# is set to False, the first waveform estimate is taken from the sliCQT and the Wiener-EM step is applied on the STFT,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L301}} shown in Code Listing \ref{code:wienerstft}. If \Verb#slicq_wiener# is set to True, the Wiener-EM step is performed directly on the sliCQT.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L380}} The ragged sliCQT was zero-padded into a single rectangular matrix, allowing the original Wiener-EM code to be used (with minor modifications) for both the STFT and rectangular zero-padded sliCQT.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/model.py\#L389-L404}} The zero-padding operation is shown in Code Listing \ref{code:wienerslicqt}. Each strategy results in a different music demixing quality and execution time, which will be discussed in section \ref{sec:experiment}. 
+
+\begin{listing}[ht]
+  \centering
+\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{python}{./scripts/wiener_stft.py}
+\end{inputminted}
+  \caption{Using the STFT in the Wiener-EM post-processing step}
+  \label{code:wienerstft}
+\end{listing}
+
+\begin{listing}[ht]
+  \centering
+\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{python}{./scripts/wiener_slicqt.py}
+\end{inputminted}
+  \caption{Zero-padding the sliCQT for the Wiener-EM post-processing step}
+  \label{code:wienerslicqt}
+\end{listing}
 
 \end{document}
