--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -27,7 +27,7 @@ Figure \ref{fig:umxandxumxslicq} shows how UMX and xumx-sliCQ are variants of th
 	\label{fig:umxandxumxslicq}
 \end{figure}
 
-Figure \ref{fig:xumxcl} shows how independent UMX networks for the desired four targets (vocals, drums, bass, other) are combined together in X-UMX, illustrating the key concepts of X-UMX, which are the combination losses across the four targets (CL) and the multi-domain loss functions (MDL) considering the magnitude spectrograms and time-domain waveforms, as described in section \ref{sec:xumx}.
+Figure \ref{fig:xumxcl} shows how independent UMX networks for the desired four targets (vocals, drums, bass, other) are combined together in X-UMX, illustrating the key concepts of the multi-domain loss functions (MDL), which computes loss for both the magnitude spectrograms and time-domain waveforms, and the combination losses across the four targets (CL) as described in section \ref{sec:xumx}.
 
 \begin{figure}[ht]
 	\centering
@@ -44,26 +44,26 @@ Section \ref{sec:inputrepresentation} will cover the replacement of the STFT wit
 
 In this section, we will describe the steps taken to use the sliCQT as the input representation in xumx-sliCQ.
 
-First, section \ref{sec:improvelib} will show the addition of new frequency scales that are interesting for music applications, as described in section \ref{sec:fscales}. Recall from section \ref{sec:theorynsgt} that the NSGT/sliCQT can be thought of as filterbanks, and the chosen frequency scale is the most important parameter that defines the spectral representation of the musical signal, which influences the results of the downstream application.
+First, section \ref{sec:improvelib} will show the addition of new frequency scales that are interesting for music applications that were described in section \ref{sec:fscales}. Recall from section \ref{sec:theorynsgt} that the NSGT/sliCQT can be thought of as filterbanks, and the chosen frequency scale is the most important parameter that defines the spectral representation of the musical signal, which influences the results of the downstream application.
 
 Next, section \ref{sec:torchgpu} will show the modifications made to the library to compute the transform with PyTorch on the GPU, so that it can be used in the UMX neural network code. Following that, section \ref{sec:slicqtutil} will describe additional necessary utilities added to the PyTorch sliCQT, including an overlap-add utility as described in section \ref{sec:theoryslicqt}, as well as the related spectrogram plotting code.
 
-Finally, in section \ref{sec:slicqparamsrch}, we describe the parameter search that was run to choose sliCQT parameters that may perform best in a music demixing network. Section \ref{sec:fasterbsscupy} describes modifications made to the BSS eval metrics library to make it run faster on the GPU, with the aim to speed up the parameter search process.
+Finally, in section \ref{sec:slicqparamsrch}, we describe the parameter search that was run to choose sliCQT parameters that may perform best in a music demixing application. Section \ref{sec:fasterbsscupy} describes modifications made to the BSS eval metrics library to make it run faster on the GPU, with the aim to speed up the parameter search process.
 
 \subsubsection{New frequency scales in the sliCQT library}
 \label{sec:improvelib}
 
-The time and frequency resolution of the NSGT and sliCQT in the reference library are defined from the frequency scale. The essential parameters to a frequency scale in the library are $f_{\text{min}}$ and $f_{\text{max}}$, which are the minimum and maximum frequency in Hz, and the total frequency bins. The type of scale determines how the frequency bins are distributed between $f_{min}$--$f_{\text{max}}$. A custom frequency scale may use additional parameters as needed, like the frequency offset parameter of the Variable-Q scale shown in section \ref{sec:theorynsgt}.
+In this section, we will discuss why we would like to add new frequency scales to the reference NSGT/sliCQT library.\footnote{\url{https://github.com/grrrr/nsgt/blob/master/nsgt/fscale.py}}
 
-The provided scales\footnote{\url{https://github.com/grrrr/nsgt/blob/master/nsgt/fscale.py}} are octave, log, linear (i.e. the regular STFT), and mel. The octave scale is similar to the log scale, except that the octave scale takes a bins-per-octave (bpo) argument, and the log scale takes a bins argument. Equation \eqref{equation:bpo1} describes how to compute the total bins from the bins-per-octave setting of the CQ-NSGT:
+The frequency scale is the most important parameter of the NSGT and sliCQT. It defines the nonuniform frequency bands for audio analysis desired by the user. The choice of frequency scale affects the spectral representation of the music signal. The hypothesis of this thesis is that a spectrogram generated from a musical or auditory frequency scale may improve the results of the downstream music demixing system compared to the STFT, which suffers from the time-frequency tradeoff described in section \ref{sec:jointtfa}.
+
+Section \ref{sec:theorynsgt} showed examples of NSGT spectrograms with the Constant-Q/logarithmic and mel scales, in Figures \ref{fig:bunchansgts1} and \ref{fig:bunchansgts2}. These are the scales provided in the reference NSGT/sliCQT library. There is also a provided octave scale, which is the same as the logarithmic scale, except that the octave scale takes a bins-per-octave (bpo) argument from which it computes the total number of frequency bins, instead of the logarithmic scale which takes the total number of frequency bins as a direct argument. Equation \eqref{equation:bpo1} describes how to compute the total bins from the bins-per-octave setting of the octave scale:
 
 \begin{align}
 	K = [B \log_{2}(\sfrac{\xi_{\text{max}}}{\xi_{\text{min}}} + 1]\tag{24}\label{equation:bpo1}
 \end{align}
 
-where $K$ is the total bins, $B$ is the bins-per-octave, and $\xi_{\text{min,max}}$ are the minimum and maximum frequencies. This equation was shown previously in section \ref{sec:cqt}.
-
-In the Python implementation, using the CQ-NSGT is the same as the base NSGT (or sliCQT) with a manually-defined octave scale. One can use the logarithmic scale for more direct control over the total bins. The difference is shown in Code Listing \ref{code:octvlog}. The resulting frequency scale is plotted in Figure \ref{fig:octvlog}.
+where $K$ is the total bins, $B$ is the bins-per-octave, and $\xi_{\text{min,max}}$ are the minimum and maximum frequencies. This equation was shown previously in section \ref{sec:cqt}. The difference between the logarithmic and octave scales is shown in Code Listing \ref{code:octvlog}. The resulting frequency scale is plotted in Figure \ref{fig:octvlog}.
 
 \begin{figure}[h]
   \centering
@@ -94,6 +94,11 @@ In the Python implementation, using the CQ-NSGT is the same as the base NSGT (or
 	\label{fig:octvlog}
 \end{figure}
 
+
+In section \ref{sec:fscales}, we discussed that the Variable-Q scale for music, and Bark psychoacoustic scales, are both of interest in music or auditory applications. Since we would like to find sliCQT parameters that perform best at music demixing, we would prefer a wider choice of frequency scales in our parameter search. For this reason, we are implementing, in addition to the Constant-Q and mel scales, the Variable-Q and Bark scales.
+
+The time and frequency resolution of the NSGT and sliCQT in the reference library are defined from the frequency scale. The essential parameters to a frequency scale in the library are $f_{\text{min}}$ and $f_{\text{max}}$, which are the minimum and maximum frequency in Hz, and the total frequency bins. The type of scale determines how the frequency bins are distributed between $f_{min}$--$f_{\text{max}}$. A custom frequency scale may use additional parameters as needed, like the frequency offset parameter of the Variable-Q scale shown in section \ref{sec:fscales}.
+
 To supplement the Constant-Q scales (octave and log), the Variable-Q scale was implemented.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/fscale.py\#L105}}
 
 Figure \ref{fig:vq} shows the Constant-Q/log, and Variable-Q scales for different values of the frequency offset $\gamma$.
@@ -116,87 +121,27 @@ The next frequency scale added was the Bark psychoacoustic scale,\footnote{\url{
 
 In addition to the frequency scale, the user must specify the slice length and transition area for the sliCQT in samples, to support the desired time and frequency resolution dictated by the frequency scale. As mentioned in section \ref{sec:theoryslicqt}, these parameters of the sliCQT define how the input signal is processed in smaller-sized slices.
 
-The NSGT library already contains code which warns the user if their chosen values for the slice length and transition area cannot support their desired frequency scale. The warning code was adapted to allow users to choose an appropriate slice length and transition area for their frequency scale, so that users can use the sliCQT with fewer parameters.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/fscale.py\#L36}}
+The NSGT library already contains code which warns the user if their chosen values for the slice length and transition area cannot support their desired frequency scale. The warning code was adapted to allow users to automatically choose an appropriate slice length and transition area for their frequency scale, so that users can use the sliCQT with fewer parameters.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/fscale.py\#L36}}
 
 \subsubsection{Computing the sliCQT on the GPU with PyTorch}
 \label{sec:torchgpu}
 
-The reference NSGT/sliCQT library uses NumPy, a CPU-based Python numerical computation library. To train deep neural networks efficiently, and to use the NSGT within the code of Open-Unmix, using PyTorch with GPU support is required. PyTorch, in addition to being a deep learning framework, is also a numerical computation library which implements a large amount of NumPy's functions.
+In this section, we will describe the procedure for porting the CPU-based code of the reference NSGT/sliCQT library to the GPU using PyTorch. This is needed to be able to use the sliCQT in the PyTorch GPU code of UMX. All the modifications to the library were made in my copy of the library,\footnote{\url{https://github.com/sevagh/nsgt}} and the same library was embedded inside the xumx-sliCQ code.\footnote{\url{https://github.com/sevagh/xumx-sliCQ}}.
 
-The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} package for Python prints a line-by-line output of the execution times of Python functions that you annotate with \Verb#@profile#, and it was used to find performance hotspots and bottlenecks in the NSGT library. All NumPy functions and other non-GPU code was replaced with their PyTorch equivalents.
+The reference NSGT/sliCQT library uses NumPy, a CPU-based Python numerical computation library. PyTorch, in addition to being a deep learning framework, is also a numerical computation library that implements a large amount of NumPy's functions.
 
-\begin{listing}[ht]
-  \centering
-\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{diff}{./diffs/diff2.txt}
-\end{inputminted}
-  \caption{Excerpt of the conversion of lists, for loops, and generators of the forward NSGT to torch tensors and parallel matrix operations}
-  \label{code:seconddiff}
-\end{listing}
+The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} package for Python prints a line-by-line output of the execution times of Python functions that you annotate with \Verb#@profile#, and it was used to find performance hotspots and bottlenecks in the NSGT library. All NumPy functions and other non-GPU code was replaced with their PyTorch equivalents. To the user, the only difference was the addition of a \Verb#device# parameter to the \Verb#NSGT# and \Verb#NSGT_sliced# classes, which are the NSGT and sliCQT respectively. The choices of device are PyTorch device strings, and it defaults to the value \Verb#device="cpu"#. Using \Verb#device="cuda"# allows one to select their NVIDIA GPU. In practice, any device supported by PyTorch is also supported.
 
-After the port to torch, the matrix form is a single tensor where each row represents a frequency bin, and the total number of columns represents the maximum time resolution from the highest frequency bin. Every lower frequency bin had zero-padding applied to have a row of time coefficients with the same length as the highest frequency bin. The non-matrix form could be referred to the ragged or jagged form, from its non-rectangular shape.
+Many internal methods, functions, and utilities were modified during the port to PyTorch, and each in turn was also modified to take a \Verb#device# parameter. As these are internal to the library and not intended to be used directly by the end user, they won't be described here.
 
-The following commit\footnote{\url{https://github.com/sevagh/nsgt/commit/4fb0f55350bc4c2a6fa254d9b7dfd51933ad5540}} introduced a better ragged/jagged form in the torch port. As shown in Figure \ref{fig:raggedslicqt}, frequency bins that share the same time resolution are grouped together in a rectangular matrix. This results in a list of tensors or matrices, where each tensor contains a block of frequency bins that share the same time-frequency resolution, and thus have the same length of time coefficients. We avoid zero-padding and work with meaningful time coefficients in each frequency bin.
+\subsubsection{Ragged and matrix forms of sliCQT}
+\label{sec:slicqtshape}
 
-There is a provided example script, \Verb#ragged_vs_matrix.py#,\footnote{\url{https://github.com/sevagh/nsgt/blob/main/examples/ragged_vs_matrix.py}} which shows how to work with the ragged or jagged form instead of the matrix. Listing \ref{code:raggedvmatrix} shows an example and the printed output for the matrix and ragged forms.
+After the port to PyTorch, the matrix form is a single tensor where each row represents a frequency bin, and the total number of columns represents the maximum time resolution from the highest frequency bin. Every lower frequency bin had zero-padding applied to have a row of time coefficients with the same length as the highest frequency bin. The non-matrix form could be referred to the ragged or jagged form, from its non-rectangular shape.
 
-\begin{figure}[h]
-  \centering
- \begin{minipage}{\textwidth}
-  \centering
-\setlength\partopsep{-\topsep}
-\begin{minted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{python}
-if args.matrixform:
-    print(f'NSGT-sliCQ matrix shape: {c.shape}')
-else:
-    print(f'NSGT-sliCQ jagged shape:')
-    freq_idx = 0
-    for i, C_block in enumerate(c):
-        freq_start = freq_idx
-        freq_idx += C_block.shape[2]
-        print(f'\tblock {i}, f {freq_start}: {C_block.shape}')
-\end{minted}
- \subfloat{(a) Code snippet showing the matrix and ragged forms}
- \vspace{1em}
- \end{minipage}
- \begin{minipage}{\textwidth}
-  \centering
-\begin{minted}[numbersep=\mintednumbersep,linenos,mathescape=true,breaklines,frame=single,escapeinside=||,fontsize=\scriptsize]{text}
-|\$ python examples/ragged\_vs\_matrix.py --scale bark --bins 20 --fmin 20 --fmax 22050 --matrixform ./gspi.wav|
-|NSGT-sliCQ matrix shape: torch.Size([401, 2, 21, 264])|
-|recon error (mse): 1.087067076355197e-07|
-\end{minted}
- \subfloat{(b) Output printed by above for the matrix form}
- \vspace{1em}
- \end{minipage}
-\begin{minipage}{\textwidth}
-  \centering
-\begin{minted}[numbersep=\mintednumbersep,linenos,mathescape=true,breaklines,frame=single,escapeinside=||,fontsize=\scriptsize]{text}
-|\$ python examples/ragged\_vs\_matrix.py --scale bark --bins 20 --fmin 20 --fmax 22050 ./gspi.wav|
-|NSGT-sliCQ jagged shape:|
-|        block 0, f 0: torch.Size([401, 2, 8, 16])|
-|        block 1, f 8: torch.Size([401, 2, 1, 20])|
-|        block 2, f 9: torch.Size([401, 2, 1, 24])|
-|        block 3, f 10: torch.Size([401, 2, 1, 32])|
-|        block 4, f 11: torch.Size([401, 2, 1, 40])|
-|        block 5, f 12: torch.Size([401, 2, 1, 48])|
-|        block 6, f 13: torch.Size([401, 2, 1, 60])|
-|        block 7, f 14: torch.Size([401, 2, 1, 76])|
-|        block 8, f 15: torch.Size([401, 2, 1, 96])|
-|        block 9, f 16: torch.Size([401, 2, 1, 120])|
-|        block 10, f 17: torch.Size([401, 2, 1, 152])|
-|        block 11, f 18: torch.Size([401, 2, 1, 188])|
-|        block 12, f 19: torch.Size([401, 2, 1, 236])|
-|        block 13, f 20: torch.Size([401, 2, 1, 264])|
-|recon error (mse): 1.087067076355197e-07|
-\end{minted}
- \subfloat{(c) Output printed by above for the ragged form}
- \vspace{1em}
- \end{minipage}
-  \captionof{listing}{Matrix and ragged forms of a sliCQT using 20--22,050 Hz on the Bark scale with 20 frequency bins}
-  \label{code:raggedvmatrix}
-\end{figure}
+As was shown in Figure \ref{fig:raggedslicqt} in section \ref{sec:theorynsgt}, frequency bins that share the same time resolution are grouped together in a rectangular matrix. This results in a list of tensors or matrices, where each tensor contains a block of frequency bins that share the same time resolution, and thus have the same length of time coefficients.
 
-Note the shape of the matrix form is $401 \text{ slices} \times 2 \text{ channels} \times 21 \text{ frequency bins} \times 264 \text{ time coefficents}$. The shape of the first matrix in the ragged form is $401 \text{ slices} \times 2 \text{ channels} \times 8 \text{ frequency bins} \times 16 \text{ time coefficents}$. This is the lowest time-frequency resolution of this sliCQT, with only outputs 16 time coefficients, shared by the first eight frequency bins. In the matrix form, these 16 values are padded up to 264 to fit the maximum time resolution. The total summed frequency bins of the list of matrices in the ragged form is 21, leading to an identical transform. Also note the identical reconstruction error from both forms.
+The matrix form is created by zero-padding the tensors with a lower time resolution to fit the higher time resolution frequency bins. The ragged and zero-padded matrix forms are compared in Figure \ref{fig:raggedvszpad}.
 
 \subsubsection{Overlap-add and spectrogram plotting utilities in the sliCQT library}
 \label{sec:slicqtutil}
